##########################
# Setup.py Configuration #
##########################
[metadata]
name = wm_ontologies
version = 0.0.1-dev
description = Scripts to support the World Modelers Ontologies
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
install_requires =
    rdflib
    pyyaml

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
